--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+Sprites/Escenario/Arbol1.gif
+Sprites/Escenario/GreenMountains-export-export.png
+Sprites/Escenario/GreenMountains-export.png.import
