Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ data_*/
 Sprites/Escenario/Arbol1.gif
 Sprites/Escenario/GreenMountains-export-export.png
 Sprites/Escenario/GreenMountains-export.png.import
+project.godot
