--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Sprites/Escenario/Arbol1.gif
 Sprites/Escenario/GreenMountains-export-export.png
 Sprites/Escenario/GreenMountains-export.png.import
 project.godot
+Fuentes/FuenteMenu.tres
